cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)

add_executable(227-basic-calculator-ii leetcode/editor/cn/227-basic-calculator-ii.cpp)

add_executable(150-evaluate-reverse-polish-notation leetcode/editor/cn/150-evaluate-reverse-polish-notation.cpp)